
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ uint64_t ;
typedef scalar_t__ uint32_t ;


 int KTRACE_KPERF ;
 int assert (int ) ;
 int kperf_action_set_count (int) ;
 int kperf_action_set_samplers (int,scalar_t__) ;
 int kperf_sampling_enable () ;
 int kperf_set_lightweight_pet (int) ;
 int kperf_timer_set_action (int,int) ;
 int kperf_timer_set_count (int) ;
 int kperf_timer_set_period (int,scalar_t__) ;
 int kperf_timer_set_petid (int) ;
 int kprintf (char*,...) ;
 int ktrace_end_single_threaded () ;
 int ktrace_kernel_configure (int ) ;
 int ktrace_start_single_threaded () ;
 int nanoseconds_to_absolutetime (scalar_t__,scalar_t__*) ;
 scalar_t__ strtouq (char const*,char**,int ) ;

void
kperf_kernel_configure(const char *config)
{
 int pairs = 0;
 char *end;
 bool pet = 0;

 assert(config != ((void*)0));

 ktrace_start_single_threaded();

 ktrace_kernel_configure(KTRACE_KPERF);

 if (config[0] == 'p') {
  pet = 1;
  config++;
 }

 do {
  uint32_t action_samplers;
  uint64_t timer_period_ns;
  uint64_t timer_period;

  pairs += 1;
  kperf_action_set_count(pairs);
  kperf_timer_set_count(pairs);

  action_samplers = (uint32_t)strtouq(config, &end, 0);
  if (config == end) {
   kprintf("kperf: unable to parse '%s' as action sampler\n", config);
   goto out;
  }
  config = end;

  kperf_action_set_samplers(pairs, action_samplers);

  if (config[0] == '\0') {
   kprintf("kperf: missing timer period in config\n");
   goto out;
  }
  config++;

  timer_period_ns = strtouq(config, &end, 0);
  if (config == end) {
   kprintf("kperf: unable to parse '%s' as timer period\n", config);
   goto out;
  }
  nanoseconds_to_absolutetime(timer_period_ns, &timer_period);
  config = end;

  kperf_timer_set_period(pairs - 1, timer_period);
  kperf_timer_set_action(pairs - 1, pairs);

  if (pet) {
   kperf_timer_set_petid(pairs - 1);
   kperf_set_lightweight_pet(1);
   pet = 0;
  }
 } while (*(config++) == ',');

 int error = kperf_sampling_enable();
 if (error) {
  kprintf("kperf: cannot enable sampling at boot: %d", error);
 }

out:
 ktrace_end_single_threaded();
}
